test: classify shader fallback contracts